Home Page Completed

--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,51 +1,3 @@
-.hero-img{
-    max-width: 400px;
-}
-
-.hero-text{
-    font-family: Quicksand;
-    color: #000000;
-    font-weight: 700;
-}
-.hero-detail{
-    font-family: Roboto;
-}
-.hero-btn{
-    background-color: #F46A06;
-    color: #ffffff;
-    padding: 10px 30px;
-    border-radius: 25px;
-    transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
-    font-family: Roboto;
-}
-.hero-btn:hover{
-    color: #020202;
-    background-color: rgb(247, 146, 14);
-}
-
-@media screen and (max-width: 768px){
-    .hero-container{
-        width: 100% !important;
-        padding-top: 30px;
-    }
-
-    .hero-container h1{
-        text-align: center;
-    }
-
-    .hero-container p{
-        text-align: center;
-    }
-    .hero-container div{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        width: 100%;
-    }
-
-}
-
-
 .review-heading-text{
     font-family: Quicksand;
     color: #000000;
@@ -61,6 +13,18 @@
     font-family: Quicksand;
     font-weight: 500;
 }
+.home-review-rating{
+    font-family: Quicksand;
+    font-weight: 600;
+}
+
+.home-review-image{
+    width: 35px;
+    height: 35px;
+    border-radius: 50%;
+    margin-right: 10px;
+}
+
 .home-review-name{
     font-family: Quicksand;
     font-weight: 700;
@@ -68,4 +32,8 @@
 .home-review-date{
     font-family: Quicksand;
 }
-    
+
+.star-icon{
+    width: 21px;
+    margin-bottom: 4px
+}
