--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -22,7 +22,6 @@
     padding-left: 10px !important;
     padding-right: 10px !important;
     border-bottom: 3px solid ;
-    /* border-radius: 3px; */
 }
 
 .nav-link:hover{
@@ -31,8 +30,6 @@
     padding-bottom: 3px !important;
     padding-left: 10px !important;
     padding-right: 10px !important;
-
-    /* border-radius: 3px; */
 }
 
 .active-link{
@@ -51,5 +48,45 @@
 
 .active-link:hover{
    color: #F46A06 !important;
+}
+
+@media screen and (max-width: 768px){
+    .nav-bar{
+        padding-top: 0px;
+    }
+    .nav-link{
+        padding-bottom: 0px !important;
+        padding-left: 0px !important;
+        padding-right: 0px !important;
+        border-bottom: 0px solid ;
+        margin-top: 20px !important;
+        /* border-radius: 3px; */
+    }
+    .nav-link:hover{
+        color: #F46A06 !important;
+        border-bottom: 0px solid #F46A06;
+        padding-bottom: 0px !important;
+        padding-left: 0px !important;
+        padding-right: 0px !important;
+
+        /* border-radius: 3px; */
+    }
+    .active-link{
+        color: #F46A06;
+        
+        text-decoration: none !important;
+        font-weight: 700;
+        font-family: Roboto;
+        padding-bottom: 0px !important;
+        padding-left: 0px !important;
+        padding-right: 0px !important;
+
+        border-bottom: 0px solid #F46A06;
+        margin-top: 20px !important;
+
+
+    }
+    
+    
 }
 
