--- a/src/components/HeroSection/HeroSection.css
+++ b/src/components/HeroSection/HeroSection.css
@@ -43,4 +43,13 @@
         width: 100%;
     }
 
+    .hero-img{
+        max-width: 100%;
+    }
+
+    a{
+        display: block  !important;
+        text-align: center;
+    }
+
 }
